--- a/dimensionality_reduction/pca/pca.ipynb
+++ b/dimensionality_reduction/pca/pca.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "# constants\n",
-    "PATH = '../data/all_seasons.csv'"
+    "\n",
+    "PATH = '../data/all_seasons.csv' # https://www.kaggle.com/justinas/nba-players-data\n"
    ]
   },
   {
