--- a/dimensionality_reduction/tsne/tsne.ipynb
+++ b/dimensionality_reduction/tsne/tsne.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "26aeb8e5-e177-41dd-ad0a-05dc4094560f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# constants\n",
-    "PATH = '../data/all_seasons.csv'"
+    "PATH = '../data/all_seasons.csv' # https://www.kaggle.com/justinas/nba-players-data"
    ]
   },
   {
@@ -43,16 +43,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0abf473b-0f86-4af8-a813-d843abfa91bf",
+   "execution_count": 4,
+   "id": "c1618c72-a967-4c49-bb0d-edbefbc6bfb1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11700, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(PATH).drop(columns = ['Unnamed: 0'])\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bcbd05ca-dd5f-4b85-935e-23841570871f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>team_abbreviation</th>\n",
+       "      <th>age</th>\n",
+       "      <th>player_height</th>\n",
+       "      <th>player_weight</th>\n",
+       "      <th>college</th>\n",
+       "      <th>country</th>\n",
+       "      <th>draft_year</th>\n",
+       "      <th>draft_round</th>\n",
+       "      <th>draft_number</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pts</th>\n",
+       "      <th>reb</th>\n",
+       "      <th>ast</th>\n",
+       "      <th>net_rating</th>\n",
+       "      <th>oreb_pct</th>\n",
+       "      <th>dreb_pct</th>\n",
+       "      <th>usg_pct</th>\n",
+       "      <th>ts_pct</th>\n",
+       "      <th>ast_pct</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Travis Knight</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>213.36</td>\n",
+       "      <td>106.59412</td>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>0.182</td>\n",
+       "      <td>0.142</td>\n",
+       "      <td>0.536</td>\n",
+       "      <td>0.052</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Matt Fish</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>210.82</td>\n",
+       "      <td>106.59412</td>\n",
+       "      <td>North Carolina-Wilmington</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-15.1</td>\n",
+       "      <td>0.143</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Matt Bullard</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>208.28</td>\n",
+       "      <td>106.59412</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Undrafted</td>\n",
+       "      <td>Undrafted</td>\n",
+       "      <td>Undrafted</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>0.115</td>\n",
+       "      <td>0.151</td>\n",
+       "      <td>0.535</td>\n",
+       "      <td>0.099</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Marty Conlon</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>210.82</td>\n",
+       "      <td>111.13004</td>\n",
+       "      <td>Providence</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Undrafted</td>\n",
+       "      <td>Undrafted</td>\n",
+       "      <td>Undrafted</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>0.101</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Martin Muursepp</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>205.74</td>\n",
+       "      <td>106.59412</td>\n",
+       "      <td>None</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-14.5</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.233</td>\n",
+       "      <td>0.482</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       player_name team_abbreviation   age  player_height  player_weight  \\\n",
+       "0    Travis Knight               LAL  22.0         213.36      106.59412   \n",
+       "1        Matt Fish               MIA  27.0         210.82      106.59412   \n",
+       "2     Matt Bullard               HOU  30.0         208.28      106.59412   \n",
+       "3     Marty Conlon               BOS  29.0         210.82      111.13004   \n",
+       "4  Martin Muursepp               DAL  22.0         205.74      106.59412   \n",
+       "\n",
+       "                     college country draft_year draft_round draft_number  ...  \\\n",
+       "0                Connecticut     USA       1996           1           29  ...   \n",
+       "1  North Carolina-Wilmington     USA       1992           2           50  ...   \n",
+       "2                       Iowa     USA  Undrafted   Undrafted    Undrafted  ...   \n",
+       "3                 Providence     USA  Undrafted   Undrafted    Undrafted  ...   \n",
+       "4                       None     USA       1996           1           25  ...   \n",
+       "\n",
+       "   pts  reb  ast  net_rating  oreb_pct  dreb_pct  usg_pct  ts_pct  ast_pct  \\\n",
+       "0  4.8  4.5  0.5         6.2     0.127     0.182    0.142   0.536    0.052   \n",
+       "1  0.3  0.8  0.0       -15.1     0.143     0.267    0.265   0.333    0.000   \n",
+       "2  4.5  1.6  0.9         0.9     0.016     0.115    0.151   0.535    0.099   \n",
+       "3  7.8  4.4  1.4        -9.0     0.083     0.152    0.167   0.542    0.101   \n",
+       "4  3.7  1.6  0.5       -14.5     0.109     0.118    0.233   0.482    0.114   \n",
+       "\n",
+       "    season  \n",
+       "0  1996-97  \n",
+       "1  1996-97  \n",
+       "2  1996-97  \n",
+       "3  1996-97  \n",
+       "4  1996-97  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667af077-8d88-474d-aab3-f410ad6e14cc",
+   "id": "4ff8db93-466c-49fe-93ee-b4c1556a84c6",
    "metadata": {},
    "outputs": [],
    "source": []
