updated cell docs

--- a/dimensionality_reduction/pca/pca.ipynb
+++ b/dimensionality_reduction/pca/pca.ipynb
@@ -283,7 +283,7 @@
    "id": "f1aeb8f4-8d24-47d5-8f9f-226785ba23a3",
    "metadata": {},
    "source": [
-    "## Explore Data"
+    "## EDA"
    ]
   },
   {
