added numerical features for pca

--- a/dimensionality_reduction/pca/pca.ipynb
+++ b/dimensionality_reduction/pca/pca.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "2ccf0919-8c7c-4668-9038-644f7f29a421",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "08aa8fcb-cbb7-4cd7-b047-e3ff50e65f43",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "ed373d5c-576e-4af6-8e2f-be7594c102b4",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "6d24eea3-5583-4321-93d0-d9ca93beda8d",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "555caa5c-2b7a-4917-a5fc-dfdc8c5c2e71",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "dfa2d5fc-2523-478b-8d2e-5b7f721fcd3f",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "143fe786-b24f-4e1f-afb9-dd332f4f9e3d",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "id": "43d6bcbb-5fcd-43bd-aacc-44647ee3b59f",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1115,7 @@
        "[20 rows x 21 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,6 +1162,16 @@
    "metadata": {},
    "source": [
     "## Dimensionality Reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "60e0faa0-821f-445c-9d5f-650ccb574733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_feats = list(df._get_numeric_data().columns)"
    ]
   },
   {
