6 bullets in they head like david

--- a/dimensionality_reduction/pca/pca.ipynb
+++ b/dimensionality_reduction/pca/pca.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# constants\n",
     "\n",
-    "PATH = '../data/all_seasons.csv' # https://www.kaggle.com/justinas/nba-players-data\n"
+    "PATH = '../data/all_seasons.csv' # https://www.kaggle.com/justinas/nba-players-data"
    ]
   },
   {
@@ -61,223 +61,6 @@
    "source": [
     "df = pd.read_csv(PATH).drop(columns = ['Unnamed: 0'])\n",
     "print(df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "de79380e-e06e-42c2-bd32-1e144373c616",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>player_name</th>\n",
-       "      <th>team_abbreviation</th>\n",
-       "      <th>age</th>\n",
-       "      <th>player_height</th>\n",
-       "      <th>player_weight</th>\n",
-       "      <th>college</th>\n",
-       "      <th>country</th>\n",
-       "      <th>draft_year</th>\n",
-       "      <th>draft_round</th>\n",
-       "      <th>draft_number</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pts</th>\n",
-       "      <th>reb</th>\n",
-       "      <th>ast</th>\n",
-       "      <th>net_rating</th>\n",
-       "      <th>oreb_pct</th>\n",
-       "      <th>dreb_pct</th>\n",
-       "      <th>usg_pct</th>\n",
-       "      <th>ts_pct</th>\n",
-       "      <th>ast_pct</th>\n",
-       "      <th>season</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Travis Knight</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>213.36</td>\n",
-       "      <td>106.59412</td>\n",
-       "      <td>Connecticut</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.127</td>\n",
-       "      <td>0.182</td>\n",
-       "      <td>0.142</td>\n",
-       "      <td>0.536</td>\n",
-       "      <td>0.052</td>\n",
-       "      <td>1996-97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Matt Fish</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>210.82</td>\n",
-       "      <td>106.59412</td>\n",
-       "      <td>North Carolina-Wilmington</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-15.1</td>\n",
-       "      <td>0.143</td>\n",
-       "      <td>0.267</td>\n",
-       "      <td>0.265</td>\n",
-       "      <td>0.333</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1996-97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Matt Bullard</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>208.28</td>\n",
-       "      <td>106.59412</td>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.016</td>\n",
-       "      <td>0.115</td>\n",
-       "      <td>0.151</td>\n",
-       "      <td>0.535</td>\n",
-       "      <td>0.099</td>\n",
-       "      <td>1996-97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Marty Conlon</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>210.82</td>\n",
-       "      <td>111.13004</td>\n",
-       "      <td>Providence</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>-9.0</td>\n",
-       "      <td>0.083</td>\n",
-       "      <td>0.152</td>\n",
-       "      <td>0.167</td>\n",
-       "      <td>0.542</td>\n",
-       "      <td>0.101</td>\n",
-       "      <td>1996-97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Martin Muursepp</td>\n",
-       "      <td>DAL</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>205.74</td>\n",
-       "      <td>106.59412</td>\n",
-       "      <td>None</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>-14.5</td>\n",
-       "      <td>0.109</td>\n",
-       "      <td>0.118</td>\n",
-       "      <td>0.233</td>\n",
-       "      <td>0.482</td>\n",
-       "      <td>0.114</td>\n",
-       "      <td>1996-97</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       player_name team_abbreviation   age  player_height  player_weight  \\\n",
-       "0    Travis Knight               LAL  22.0         213.36      106.59412   \n",
-       "1        Matt Fish               MIA  27.0         210.82      106.59412   \n",
-       "2     Matt Bullard               HOU  30.0         208.28      106.59412   \n",
-       "3     Marty Conlon               BOS  29.0         210.82      111.13004   \n",
-       "4  Martin Muursepp               DAL  22.0         205.74      106.59412   \n",
-       "\n",
-       "                     college country draft_year draft_round draft_number  ...  \\\n",
-       "0                Connecticut     USA       1996           1           29  ...   \n",
-       "1  North Carolina-Wilmington     USA       1992           2           50  ...   \n",
-       "2                       Iowa     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "3                 Providence     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "4                       None     USA       1996           1           25  ...   \n",
-       "\n",
-       "   pts  reb  ast  net_rating  oreb_pct  dreb_pct  usg_pct  ts_pct  ast_pct  \\\n",
-       "0  4.8  4.5  0.5         6.2     0.127     0.182    0.142   0.536    0.052   \n",
-       "1  0.3  0.8  0.0       -15.1     0.143     0.267    0.265   0.333    0.000   \n",
-       "2  4.5  1.6  0.9         0.9     0.016     0.115    0.151   0.535    0.099   \n",
-       "3  7.8  4.4  1.4        -9.0     0.083     0.152    0.167   0.542    0.101   \n",
-       "4  3.7  1.6  0.5       -14.5     0.109     0.118    0.233   0.482    0.114   \n",
-       "\n",
-       "    season  \n",
-       "0  1996-97  \n",
-       "1  1996-97  \n",
-       "2  1996-97  \n",
-       "3  1996-97  \n",
-       "4  1996-97  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   },
   {
@@ -453,256 +236,6 @@
    "source": [
     "_ = single_col_avg_viz_fn(df = df, c1 = 'age', avg_col = 'ast', title = 'Average Assists of Players per Age')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "143fe786-b24f-4e1f-afb9-dd332f4f9e3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['player_name', 'team_abbreviation', 'age', 'player_height',\n",
-       "       'player_weight', 'college', 'country', 'draft_year', 'draft_round',\n",
-       "       'draft_number', 'gp', 'pts', 'reb', 'ast', 'net_rating', 'oreb_pct',\n",
-       "       'dreb_pct', 'usg_pct', 'ts_pct', 'ast_pct', 'season'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "43d6bcbb-5fcd-43bd-aacc-44647ee3b59f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>player_name</th>\n",
-       "      <th>team_abbreviation</th>\n",
-       "      <th>age</th>\n",
-       "      <th>player_height</th>\n",
-       "      <th>player_weight</th>\n",
-       "      <th>college</th>\n",
-       "      <th>country</th>\n",
-       "      <th>draft_year</th>\n",
-       "      <th>draft_round</th>\n",
-       "      <th>draft_number</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pts</th>\n",
-       "      <th>reb</th>\n",
-       "      <th>ast</th>\n",
-       "      <th>net_rating</th>\n",
-       "      <th>oreb_pct</th>\n",
-       "      <th>dreb_pct</th>\n",
-       "      <th>usg_pct</th>\n",
-       "      <th>ts_pct</th>\n",
-       "      <th>ast_pct</th>\n",
-       "      <th>season</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11411</th>\n",
-       "      <td>Christian Wood</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>208.28</td>\n",
-       "      <td>97.068688</td>\n",
-       "      <td>UNLV</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>-3.8</td>\n",
-       "      <td>0.055</td>\n",
-       "      <td>0.228</td>\n",
-       "      <td>0.255</td>\n",
-       "      <td>0.591</td>\n",
-       "      <td>0.089</td>\n",
-       "      <td>2020-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4406</th>\n",
-       "      <td>Mike James</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>187.96</td>\n",
-       "      <td>86.182480</td>\n",
-       "      <td>Duquesne</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>20.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>-2.3</td>\n",
-       "      <td>0.018</td>\n",
-       "      <td>0.095</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.583</td>\n",
-       "      <td>0.276</td>\n",
-       "      <td>2005-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10602</th>\n",
-       "      <td>JaKarr Sampson</td>\n",
-       "      <td>CHI</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>205.74</td>\n",
-       "      <td>97.522280</td>\n",
-       "      <td>St. John's, N.Y.</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-2.3</td>\n",
-       "      <td>0.037</td>\n",
-       "      <td>0.196</td>\n",
-       "      <td>0.234</td>\n",
-       "      <td>0.633</td>\n",
-       "      <td>0.052</td>\n",
-       "      <td>2018-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11170</th>\n",
-       "      <td>Fred VanVleet</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>185.42</td>\n",
-       "      <td>89.357624</td>\n",
-       "      <td>Wichita State</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>0.016</td>\n",
-       "      <td>0.101</td>\n",
-       "      <td>0.237</td>\n",
-       "      <td>0.534</td>\n",
-       "      <td>0.264</td>\n",
-       "      <td>2020-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9656</th>\n",
-       "      <td>Jeremy Lin</td>\n",
-       "      <td>BKN</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>190.50</td>\n",
-       "      <td>90.718400</td>\n",
-       "      <td>Harvard</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>Undrafted</td>\n",
-       "      <td>...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-9.5</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.254</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>0.235</td>\n",
-       "      <td>2017-18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          player_name team_abbreviation   age  player_height  player_weight  \\\n",
-       "11411  Christian Wood               HOU  25.0         208.28      97.068688   \n",
-       "4406       Mike James               TOR  31.0         187.96      86.182480   \n",
-       "10602  JaKarr Sampson               CHI  26.0         205.74      97.522280   \n",
-       "11170   Fred VanVleet               TOR  27.0         185.42      89.357624   \n",
-       "9656       Jeremy Lin               BKN  29.0         190.50      90.718400   \n",
-       "\n",
-       "                college country draft_year draft_round draft_number  ...  \\\n",
-       "11411              UNLV     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "4406           Duquesne     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "10602  St. John's, N.Y.     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "11170     Wichita State     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "9656            Harvard     USA  Undrafted   Undrafted    Undrafted  ...   \n",
-       "\n",
-       "        pts  reb  ast  net_rating  oreb_pct  dreb_pct  usg_pct  ts_pct  \\\n",
-       "11411  21.0  9.6  1.7        -3.8     0.055     0.228    0.255   0.591   \n",
-       "4406   20.3  3.3  5.8        -2.3     0.018     0.095    0.250   0.583   \n",
-       "10602  20.0  8.0  1.0        -2.3     0.037     0.196    0.234   0.633   \n",
-       "11170  19.6  4.2  6.3         3.3     0.016     0.101    0.237   0.534   \n",
-       "9656   18.0  0.0  4.0        -9.5     0.000     0.000    0.254   0.597   \n",
-       "\n",
-       "       ast_pct   season  \n",
-       "11411    0.089  2020-21  \n",
-       "4406     0.276  2005-06  \n",
-       "10602    0.052  2018-19  \n",
-       "11170    0.264  2020-21  \n",
-       "9656     0.235  2017-18  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['draft_year'] == 'Undrafted'].sort_values(by = 'pts', ascending = False).head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00603a75-f882-4a8b-bc4b-fcc3eaab078e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
