added documentation on visualization fn

--- a/dimensionality_reduction/pca/pca.ipynb
+++ b/dimensionality_reduction/pca/pca.ipynb
@@ -79,6 +79,22 @@
    "outputs": [],
    "source": [
     "def single_col_avg_viz_fn(df, c1, avg_col, title):\n",
+    "    '''\n",
+    "    This function will visualize the average value of a specific column in a dataset\n",
+    "    \n",
+    "    params:\n",
+    "        df (DataFrame) : The dataset you want to visualize\n",
+    "        c1 (String) : The column you want to reference on the x axis (usually time)\n",
+    "        avg_col (String) : The column you want to take an average of over c1\n",
+    "        title (String) : The title of the graph\n",
+    "        \n",
+    "    example:\n",
+    "        single_col_avg_viz_fn(\n",
+    "            df = df, c1 = 'draft_year',\n",
+    "            avg_col = 'net_rating', \n",
+    "            title = 'Average Yearly Net Rating of Players'\n",
+    "        )\n",
+    "    '''\n",
     "    plt.clf()\n",
     "    res = df.groupby([c1])[avg_col].mean().reset_index()\n",
     "    res.plot(x = c1, y = avg_col, kind = 'line', color = 'maroon')\n",
