added documentation outlining the 3 parts to PCA

--- a/dimensionality_reduction/pca/pca.ipynb
+++ b/dimensionality_reduction/pca/pca.ipynb
@@ -306,6 +306,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29e5797e-5595-4056-9797-5974d205bc97",
+   "metadata": {},
+   "source": [
+    "3 Parts to PCA\n",
+    "1) STANDARDIZATION\n",
+    "2) COVARIANCE MATRIX COMPUTATION\n",
+    "3) COMPUTE THE EIGENVECTORS AND EIGENVALUES OF THE COVARIANCE MATRIX TO IDENTIFY THE PRINCIPAL COMPONENTS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "24b437df-693e-402b-ad6a-1fcfaa1bc370",
