added source documentation to file

--- a/dimensionality_reduction/pca/pca_from_scratch.ipynb
+++ b/dimensionality_reduction/pca/pca_from_scratch.ipynb
@@ -26,7 +26,17 @@
    "id": "6795550a-8359-4561-9b4b-53aae47562d6",
    "metadata": {},
    "source": [
-    "## Implementation"
+    "## Machine Learning Mastery Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd15154-cb39-478b-b7ff-3a1bf90aba50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# taken from https://machinelearningmastery.com/calculate-principal-component-analysis-scratch-python/"
    ]
   },
   {
@@ -58,6 +68,7 @@
     }
    ],
    "source": [
+    "\n",
     "# define a matrix\n",
     "A = array([[1, 2], [3, 4], [5, 6]])\n",
     "print(A)\n",
