began skelton coding of pca from scratch

--- a/dimensionality_reduction/pca/pca_from_scratch.ipynb
+++ b/dimensionality_reduction/pca/pca_from_scratch.ipynb
@@ -41,6 +41,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7f71197f-097c-472a-a894-3e719a2faee3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PCA(object):\n",
+    "    def __init__(self, X, n_comp):\n",
+    "        self.X = X\n",
+    "        self.n_comp = n_comp\n",
+    "        \n",
+    "    def calc_mean(self):\n",
+    "        return mean(self.X.T, axis = 1)\n",
+    "    \n",
+    "    def calc_center_cols(self):\n",
+    "        return self.X = self.calc_mean()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "b726327c-dfca-4189-8419-4f3c44b0ae77",
    "metadata": {},
