added pca function to PCA clasS

--- a/dimensionality_reduction/pca/pca_from_scratch.ipynb
+++ b/dimensionality_reduction/pca/pca_from_scratch.ipynb
@@ -57,7 +57,8 @@
     "    def calc_center_cols(self):\n",
     "        return self.X = self.calc_mean()\n",
     "    \n",
-    "    "
+    "    def pca(self):\n",
+    "        pass"
    ]
   },
   {
